@@ -329,7 +329,9 @@
       <Unit41>
         <Filename Value="oslistedit.pas"/>
         <IsPartOfProject Value="True"/>
+        <ComponentName Value="FListedit"/>
         <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
       </Unit41>
     </Units>
   </ProjectOptions>
